@@ -354,6 +354,8 @@ class ObjectManagerTests( unittest.TestCase ):
         self.assertRaises(BadRequest, om._setObject, '111', si)
         self.assertRaises(BadRequest, om._setObject, 'REQUEST', si)
         self.assertRaises(BadRequest, om._setObject, '/', si)
+        self.assertRaises(BadRequest, om._setObject, '@@view', si)
+
 
 def test_suite():
     suite = unittest.TestSuite()
