@@ -18,6 +18,9 @@ Zope Changes
 
     Bugs fixed
 
+      - OFS ObjectManager: Fixed 'checkValidId'.
+        Names starting with '@' are reserved for views and not allowed in IDs.
+
       - Collector #2039: 'ZPublisher.HTTPRequest.HTTPRequest._authUserPW'
         choked on passwords which contained colons.
 
